--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,20 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,600');
+
+
 .App {
   text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 
-.App-header {
-  background-color: #fff;
-  height: 80px;
-  padding: 20px;
-  color: #2d2d2d;
+h1 {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
+
 
 button {
-  background: skyblue;
-  border-radius: 5px;
-  margin: auto;
-  height: 40px;
-  width: 100px;
-  padding: 2px;
-  font-size: .8em;
+  height: 2.5em;
+  border-radius: 4px;
+  border-color: transparent;
+  margin-left: 2px;
 }
