--- a/src/css/User.css
+++ b/src/css/User.css
@@ -1,17 +1,28 @@
-.User {
+.User-container {
   display: flex;
   margin: auto;
   width: 80%;
+  height: 100px;
   border: solid 1px #d9d9d9;
   flex: 1;
 }
 
-.User-photo img{
-   padding: 25px;
-  max-height: 150px;  
+.User-photo img {
+  max-height: 100px;
 }
 
-.User h3 {
-  font-size: 1.5em;
-  padding: 1em;
+.User-container h3 {
+  font-size: 1.2em;
+  font-weight: 300;
+  padding-left: .5em;
+  margin: auto;
 }
+
+.User-container button {
+  float: right;
+  margin: auto;
+  background: #fff;
+  border: solid 1px #2d2d2d;
+  border-radius: 3px;
+}
+
