--- a/src/css/Destination.css
+++ b/src/css/Destination.css
@@ -5,27 +5,23 @@
   border-radius: 5px;
   padding: .41em;
   margin: auto;
-  margin-top: 1em;
+  margin-top: .5em;
   width: 325px;
-  height: 7em;
+  height: 8em;
   display: flex;
   flex-direction: column;
 }
 
-.Destination-Container li {
-  list-style-type: none;
-  font-size: .7em;
-}
 
 h3 {
   font-family: "Roboto", sans-serif;
   font-size: 1em;
   font-weight: 300;
-/*  margin-bottom: -.1em;
-*/}
+  margin-bottom: -.5em;
+}
 
 .Destination-Container a {
-  font-size: .7em;
+  font-size: .5em;
   text-decoration: none;
   margin-top: -1em;
   color: #585858;
@@ -36,18 +32,35 @@ h3 {
   color: #585858;
 }
 
+.destroy {
+  width: 20%;
+  margin: -.5em 0 0 24em;
+  color: gray;
+}
+
 .destructive {
   background: #DC3D24;
   color: #fff;
-  
+  margin: auto;
+  width: 50%;  
 }
 
 .positive {
   background: #50d07d;
   color: #fff;
+  margin: auto;
+  width: 40%;
 }
 
 ul {
   text-align: center;
   font-size: .4em;
+}
+
+
+button {
+  height: 2.5em;
+  border-radius: 4px;
+  border-color: transparent;
+  margin-left: 2px;
 }
