--- a/src/css/NewDestination.css
+++ b/src/css/NewDestination.css
@@ -1,8 +1,9 @@
 .Destination-Form {
-  height: 6em;
+  height: 8em;
   margin: auto;
   padding: .5em;
   background: #fff;
+  border-bottom: solid 1px #e9e9e9;
 }
 
 .Destination-Form input {
@@ -21,5 +22,11 @@
   height: 2.2em;
   background: #fff;
   color: #2d2d2d;
+  font-size: 8pt;
   border: solid 1px #6A9A1F;
+}
+
+.Destination-Form p {
+  font-size: .8em;
+  color: #6A9A1F;
 }
