--- a/src/css/User.css
+++ b/src/css/User.css
@@ -1,30 +1,32 @@
-.User-container {
-  margin: auto;
-  width: 60%;
-  height: 100px;
-}
+
 
 .User-photo img {
-  margin: auto;
-  max-height: 60px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: .1em 8em;
+  max-height: 30px;
   border-radius: 32px;
 }
 
 .User-container h3 {
-  font-size: 1em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: .8em;
   font-weight: 300;
-  margin: auto;
+  margin: .6em 4.5em;
 }
 
 .User-container button {
   margin: auto;
   color: #2d2d2d;
   margin-left: 2em;
-  border: solid 1px #2d2d2d;
   border-radius: 3px;
   height: 3em;
+  font-size: 7pt;
   position: absolute;
   top: 0;
   right: 0;
-  margin: 5px;
+  margin: 4px;
 }
