--- a/src/css/NewDestination.css
+++ b/src/css/NewDestination.css
@@ -1,20 +1,18 @@
 .Destination-Form {
-  height: 8em;
-  margin: auto;
-  padding: .5em;
+  height: 10em;
   background: #fff;
-  border-bottom: solid 1px #e9e9e9;
+  margin: auto;
 }
 
 .Destination-Form input {
-  height: 3em;
+  height: 2.5em;
   text-align: center;
-  font-size: .6em;
+  font-size: .7em;
   width: 25em;
   border: solid 1px #6A9A1F;
   border-radius: 5px;
   margin-right: .5em;
-  margin-bottom: .3em;
+  margin-bottom: .4em;
 }
 
 .Destination-Form button {
@@ -30,3 +28,7 @@
   font-size: .8em;
   color: #6A9A1F;
 }
+
+input[type='text']
+  font-size: inherit;
+
