--- a/src/css/User.css
+++ b/src/css/User.css
@@ -3,19 +3,19 @@
 .User-photo img {
   position: absolute;
   top: 0;
-  right: 0;
-  margin: .1em 8em;
-  max-height: 30px;
+  left: 0;
+  margin: .2em 0 0 .8em;
+  max-height: 32px;
   border-radius: 32px;
 }
 
 .User-container h3 {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   font-size: .8em;
   font-weight: 300;
-  margin: .6em 4.5em;
+  margin: .6em 3.7em;
 }
 
 .User-container button {
