Added destinations, destination, and new destination component from dev1.0 to allow users to add destinations to an election event and only renders destinations pertaining to that specific event;

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,3 +7,15 @@ body {
 button {
   color: red;
 }
+
+input {
+  border: solid 1px black;
+}
+
+div {
+  border-top: solid 1px #707070;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  color: #303030;
+}
