--- a/src/css/user.css
+++ b/src/css/user.css
@@ -5,11 +5,12 @@
   width: 30%;
   display: flex;
   flex: row;
-  border: solid red;
+  padding: 10px;
 }
 
 .user-photo img {
   max-height: 60px;
+  margin-right: 1em;
 }
 
 .user-name {
