Added navigation component that renders the Groups Component. Added styling for groups and events list, and Destination component has styling

--- a/src/css/event.css
+++ b/src/css/event.css
@@ -1,6 +1,6 @@
 .event-container {
   text-decoration: none;
-  padding-top: 1em;
+  padding: .3em;
 }
 
 .event {
@@ -9,6 +9,6 @@
 }
 
 .event--active {
-  color: green;
+  color: black;
   text-decoration: none;
 }
