--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,12 +1,3 @@
-.application-container {
-  height: 50em;
-}
+.application-header {
 
-.events-container {
-  position: absolute;
-  left: 0;
-  width: 25%;
-  height: 50%;
-  text-align: center;
-  border: solid 1px #c9c9c9;
 }
