--- a/src/css/destinations.css
+++ b/src/css/destinations.css
@@ -1,11 +1,13 @@
 .destinations-container { 
-  border: solid 1px #707070;
   position: absolute;
-  margin-left: 20em;
-  margin-top: -22.5em;
+  margin-left: 15em;
+  margin-top: -9em;
   padding: 20px;
-  width: 45em;
-  height: 80%;
-  top: 0;
+  width: 49em;
+  text-align: center;
 }
 
+h1 {
+  font-size: 2em;
+  letter-spacing: 3px;
+}
