--- a/src/css/user.css
+++ b/src/css/user.css
@@ -9,11 +9,14 @@
 }
 
 .user-photo img {
-  max-height: 60px;
+  max-height: 48px;
   margin-right: 1em;
+  border-radius: 24px;
 }
 
-.user-name {
+.user-menu {
+  font-size: 10pt;
+  color: gray;
 }
 
 button {
